  * Makefiles (#1860, #1898)
  * objdump-nasm: Improve handling of ``--no-show-raw-insn`` dumps (#1981)
  * Prolog: Support escaped ``\`` inside quoted strings (#1479)
  * RobotFramework: Improve empty brace handling (#1921, #1922)
  * Terraform: Add the 'set' type
  * Terraform: Support heredocs (#1909)

- Added styles:

  * Dracula (#1796)
  * LilyPond (#1845) -- to be used for the ``LilyPond`` language.
  * One-Dark (#1924, #1979)

.. note::

  All of the new styles unfortunately do not conform to WCAG recommendations.

- There is new infrastructure in place to improve style accessibility. The default style has been updated to conform to WCAG recommendations. All styles are now checked for sufficient contrast by default to prevent regressions. (#1919, #1937, #1938, #1940)
- Clean up unused imports (#1887)
- Fix multiple lexers producing repeated single-character tokens
- Fix multiple lexers marking whitespace as ``Text`` (#1237, #1905, #1908, #1914, #1911, #1923, #1939, #1957)
- Remove duplicated assignments in the Paraiso style (#1934)
- ``pygmentize`` supports JSON output for the various list functions now, making it easier to consume them from scripts. (#1437, #1890)
- Use the ``shell`` lexer for ``kshrc`` files (#1947)
- Use the ``ruby`` lexer for ``Vagrantfile`` files (#1936)
- Add a ``groff`` formatter (#1873)
- Update documentation (#1928)
- Line anchors now link to themselves (#1973)
- Add official support for Python 3.10 (#1917)
- Fix several missing colors in dark styles: Gruvbox dark, Monokai, Rrt, Sas, Strata dark (#1955)


Version 2.10.0
--------------
(released August 15th, 2021)

- Added lexers:

  * ASC armored files (#1807)
  * GSQL (#1809, #1866)
  * Javascript REPL (#1825)
  * procfile (#1808)
  * Smithy (#1878, #1879)

- Updated lexers:

  * C-family: Fix preprocessor token issues (#1830)
  * C# (#1573, #1869)
  * CSound (#1837)
  * Fennel (#1862)
  * JavaScript (#1741, #1814)
  * LLVM (#1824)
  * Python (#1852)
  * Rust
  