@@ -2,6 +2,7 @@
   "default": 4.5,
   "emacs": 2.4,
   "friendly": 2.2,
+  "friendly_grayscale": 2.2,
   "colorful": 2.2,
   "autumn": 2.2,
   "murphy": 1.4,
