@@ -45,6 +45,7 @@ Version 2.11.0
 - Added styles:
 
   * Dracula (#1796)
+  * Friendly Grayscale (#1040, #1273)
   * LilyPond (#1845) -- to be used for the ``LilyPond`` language.
   * One-Dark (#1924, #1979)
 
